Fix where token is placed on mobile version

--- a/src/components/Board/Board.scss
+++ b/src/components/Board/Board.scss
@@ -74,7 +74,8 @@
 @media screen and (max-width: 280px) {
   .boxes {
     height: 40px;
-    width: 40px 
+    width: 40px ;
+    font-size: 10px
   }
   .turn-message {
     font-size: 1.5em;
